--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,8 @@ spring:
       hibernate:
         format-sql: true
       database: mysql
+base:
+  backend:
+    url: "/api/v1"
+  frontend:
+    url: "http://localhost:4200/"
