--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/database
+    url: jdbc:mysql://localhost:3306/onlab1
     username: root
     password: admin
     driver-class-name: com.mysql.cj.jdbc.Driver
